omg center middle

--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-dashu love baobao
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>gulp-test</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <!--<link rel="stylesheet" href="../css/main.css" />-->
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        
+        .w_imgCenter {
+            display: table-cell;
+            width: 800px;
+            height: 400px;
+            background: #ccc;
+            text-align: center;
+            vertical-align: middle;
+        }
+    </style>
+</head>
+
+<body>
+    <!--Hello Gulp<br />deploy<br />AMD / CMD / WEBPACK
+    <script type="text/javascript" src="../js/lib/require.js" data-main="../js/main.js"></script>-->
+    <div class="w_imgCenter"><img src="cat.jpg" alt=""></div>
+</body>
+
+</html>
